Remove redundant "importedAt" of book struct
